--- a/Prototype.html
+++ b/Prototype.html
@@ -16,15 +16,50 @@
 <div class="container-fluid bg-2 text-center">
 
     <!-- main text-->
-
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender1">App Prototype</div>
+        <div class="panel-heading extender" id="extender1">UI</div>
         <div class="panel-body" id="extended1">
+            <h3>Design Aspects</h3>
+            <hr>
+            <p>There are several design aspects that must be acknowledged in order to make our application as easy to use as possible.
+                <ul>
+                    <li>Simplicity</li>
+                    <li>Visibility</li>
+                    <li>Consistency</li>
+                    <li>Feedback</li>
+                </ul>
+            Lets first consider <b>simplicity</b>, if there is too much information given to the user at one time, the user may find the amount
+            of information intimidating and will likely stop using the app in the near future. To avoid this problem when designing the app
+            there should be as less text as possible, especially labels as everything should be made intuitive to the end user.
+            <br><br>
+            <b>Visibility</b> concerns how visible certain aspects of the application are. This may be the placement of certain buttons in obvious
+            and easy to find places or this could also be the contrast between text and background.Text written in colors that are too similar to each other will
+            be difficult for a regular user to read and may be impossible for a person that is colorblind. Applications that are difficult for the user to navigate
+            because of irregular button placements would take them too long to understand and ultimately they may switch to using a different service.
+            <br><br>
+            The application should be <b>consistent</b> in order for the application to be both simple and visible. One aspect of consistency is the layout of the app
+            a consistent layout allows a user to better assume the positions of elements of importance much better which leads to learning the app much quicker.
+            <br><br>
+            <b>Feedback</b> is important as it acknowledges actions made by the user. Actions that are not acknowledged would most likely lead to the user doing the same thing many times
+            (i.e. misunderstandings between the user and the application) ultimately leading to a result that they were not expecting.
+            </p>
+            <h3>Our Design</h3>
+            <hr>
+            <p>Bellow are some of the first sketches that we have made for our application</p>
+            <br>
+            <div class="row">
+                <img src="img/Sketch1.PNG" class="img-rounded img-responsive col-sm-6" id="sketch1-image" alt="sketch">
+                <img src="img/Sketch2.PNG" class="img-rounded img-responsive col-sm-6" id="sketch2-image" alt="sketch">
+            </div>
+        </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender2">App Prototype</div>
+        <div class="panel-body" id="extended2">
             <h3>Description</h3>
             <hr>
-            <p>After collating our data from the survey and interviews, we set out to create personas for how we imagined the users of the app will be based on the results. At the same time we also created scenarios as to where and how will they be using the app. The advantages of taking such an approach was to better understand the users and come up with additional features to the app to make it more attractive to the public. Hence, with our requirements document having gone through may iterations we began designing sketches of the app based on the document and based on that built the prototype. Some of the problems that we caught during our initial stages was the inability to buy premium bonds through their app, app focused merely on premium bonds and a very dark interface. As you can see in our prototype we tackled this with the addition of all accounts functionality into one app where users can manage all their accounts and also open up other accounts within the comfort of their home. With the dull interface we tackled it with adding a mixture of colours among all pages each colour actually denoting a type of service as showed on their website. For example, yellow indicates Premium Bonds and orange indicates Income Bonds. We felt this made the design very intuitive and will appeal to the younger generation, that would discard a bank based on their app, addressing NS&#38Is initial problem.
+            <p>After collating our data from the survey and interviews, we set out to create personas for how we imagined the users of the app will be based on the results. At the same time we also created scenarios as to where and how will they be using the app. The advantages of taking such an approach was to better understand the users and come up with additional features to the app to make it more attractive to the public. Hence, with our requirements document having gone through many iterations we began designing sketches of the app based on the document and based on that built the prototype. Some of the problems that we caught during our initial stages was the inability to buy premium bonds through their app, app focused merely on premium bonds and a very dark interface. As you can see in our prototype we tackled this with the addition of all accounts functionality into one app where users can manage all their accounts and also open up other accounts within the comfort of their home. With the dull interface we tackled it with adding a mixture of colours among all pages each colour actually denoting a type of service as showed on their website. For example, yellow indicates Premium Bonds and orange indicates Income Bonds. We felt this made the design very intuitive and will appeal to the younger generation, that would discard a bank based on their app, addressing NS&#38Is initial problem.
                 <br><br>
-                To give a short run through of the app, we begin at the login page which when we implement a proof of concept of the app will have proper security but for now you can just click log in and will be redirected to the home page. Here at the home page having easy access in mind we show a brief summary of all the users accounts, type and balance, which can easily be clicked to gain more information. If you click on the direct saver, you will be directed to your account page where you will be able to see past transactions, make deposits/withdrawals, transfer money from this product to another and check your account details. Clicking back will bring you back to the home page where you will be able to access the menu that gives you access to all part of the app. The accounts page is similar to the home page in the sense that it display all your accounts information and will allow to access each one to manage it. Another page in the app is the products page where users can go and learn about NS&#38Is products and also sign up for said products through the app. This allows NS&#38Is to be digital in its entirety.
+                 Our prototype is not fully functional, instead we use "Wizard of Oz" techniques to simulate certain functionality, like login. To give a run through of the app, we start at the home page having easy access in mind we show a brief summary of all the users accounts, type and balance, which can easily be clicked to gain more information. If you click on the direct saver, you will be directed to your account page where you will be able to see past transactions, make deposits/withdrawals, transfer money from this product to another and check your account details. Clicking back will bring you back to the home page where you will be able to access the menu that gives you access to all parts of the app. The accounts page is similar to the home page in the sense that it displays all your accounts information and will allow access to each one to manage it individually. Another page in the app is the products page where users can go and learn about NS&#38I's products and also sign up for said products through the app. This allows NS&#38I to be digitalised in its entirety.
             </p>
             <h3>Prototype</h3>
             <hr>
