--- a/Development.html
+++ b/Development.html
@@ -191,9 +191,9 @@
             <h3>Testing Strategy</h3>
             <hr>
             <p>
-                When we have started gathering requirements form our client we have realized the importance of testing.
+                Given the context of the problem, we have realised that testing will be a very important stage of our project.
                 This project would later on ideally be integrated into the back-end of National Savings and Investments,
-                this would involve venerable and important data which should not be mishandled by the application and
+                this would involve vulnerable and important data which should not be mishandled by the application and
                 everything should perform as expected.
                 <br><br>
                 To test our application, we are going to first of all use NUnit and Moq to do the unit tests. NUnit and Moq are one of the most famous unit
@@ -230,8 +230,7 @@
             <h3>Applications</h3>
             <hr>
             <img src="img/Slack.PNG" class="img-rounded img-responsive col-sm-2" id="slack-image" alt="slack">
-            <p>Slack was one of the obvious choices for our group when it came to collaboration. Basic functions such as messaging to someone to ask for help
-            or collaboration is included and at the same time slack facilitates a capability of using different channels. We were able to set-up multiple channels
+            <p>Slack was one of the obvious choices for our group when it came to collaboration. Slack facilitates communication between team members through distinct, subject specific channels. We were able to set-up multiple channels
             where one could be used to announce any progress that we have made to teammates and the client and another to arrange group meetings.</p>
             <br><br>
             <img src="img/Googledrive.PNG" class="img-rounded img-responsive col-sm-2" id="googledrive-image" alt="googledrive">
