--- a/Prototype.html
+++ b/Prototype.html
@@ -52,6 +52,7 @@
                 <img src="img/Sketch2.PNG" class="img-rounded img-responsive col-sm-6" id="sketch2-image" alt="sketch">
             </div>
         </div>
+    </div>
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender2">App Prototype</div>
         <div class="panel-body" id="extended2">
