emails and reports

--- a/Project.html
+++ b/Project.html
@@ -22,7 +22,7 @@
             <p>Our client is National Savings and Investment (via ATOS). NS&I is a company which offers government backed savings products. A majority of NS&I’s customers are aged 50 years or older, and the company is under patronised by young people. The company has identified this as a problem, and have approached us to devise and implement an IT based solution with the aim of attracting younger customers to NS&I’s savings products. The reason NS&I is pursuing this demographic is because young people provide an opportunity to the company: They are less likely to already have a savings account compared to the older generation. The company hopes to secure their business to create a new generation of loyal customers. The wider context of the project is that NS&I hopes to digitise in its entirety. The problem is fairly open-ended: NS&I has not specified what kind of solution they are expecting. Thus, it is up to us to invent, design, develop, and finally implement a proof-of-concept solution to the problem. </p>
         </div>
     </div>
-    
+
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">Research</div>
         <div class="panel-body" id="extended3">
@@ -92,12 +92,12 @@
             <h3>Interviews</h3>
             <hr>
             <p>
-                We conducted 7 interviews after distributing the survey. The purpose of the interviews was to gain a more detailed understanding of our target demographic. Since we already had quantitative data from the survey, we decided to perform semi-structured interviews as we felt these would yield richer responses. Where the survey gave us an insight into the general banking habits of millennials, we hoped the interviews would shed light on the motivations and context behind those habits. 
+                We conducted 7 interviews after distributing the survey. The purpose of the interviews was to gain a more detailed understanding of our target demographic. Since we already had quantitative data from the survey, we decided to perform semi-structured interviews as we felt these would yield richer responses. Where the survey gave us an insight into the general banking habits of millennials, we hoped the interviews would shed light on the motivations and context behind those habits.
                 <br>
-                The conversational nature of the interviews encouraged respondents to suggest what they desired from a bank, and what they felt NS&I products were lacking. 
+                The conversational nature of the interviews encouraged respondents to suggest what they desired from a bank, and what they felt NS&I products were lacking.
                 <br>
                 From our interviews we were able to conclude that our respondents valued a convenient and easy to use banking service that is available at their fingertips. They wanted savings products that were low risk, with some return.
-            </p>    
+            </p>
         </div>
     </div>
     <div class="panel panel-primary">
@@ -122,8 +122,8 @@
 
             <br><br>
 
-            We also considered other solutions such as a savings simulator that would show people a projection of earnings on their savings in different NS&I products, in order to educate them about the benefits of saving with specific products. 
-            We did not choose this solution because it would difficult to market, and it might not have the impact that NS&I desires. Also it does not fulfil NS&I's goal of further digitisation. 
+            We also considered other solutions such as a savings simulator that would show people a projection of earnings on their savings in different NS&I products, in order to educate them about the benefits of saving with specific products.
+            We did not choose this solution because it would difficult to market, and it might not have the impact that NS&I desires. Also it does not fulfil NS&I's goal of further digitisation.
             <br><br>
             Another solution we had considered was to create an API that would extend NS&#38Is functionality to third party developers. This would allow
             a bigger audience of developers to create innovative solutions that could attract millenials to the NS&I. We did not choose this solution
@@ -139,6 +139,18 @@
             <a href="https://docs.google.com/document/d/18BDK8esEOPrTz8Nr2UJUVyR8SoDciurfSqz3BU17E_c/edit?usp=sharing">Bi-Weekly Report 3</a>
             <br>
             <a href="https://docs.google.com/document/d/1GykEffBcvcAZhLD4qWIb6vYeQUcHzHNphR0mEqJi4Rk/edit?usp=sharing">Bi-Weekly Report 4</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1bUXXWbjivniW0rYqW_FCMEYHC5AsjSKIDFB11vULULE/edit?usp=sharing">Bi-Weekly Report 5</a>
+            <br>
+            <a href="https://docs.google.com/document/d/109MgQKmKDeq1DH20Mk0ekWQW1SBWZXzi3vNjgJk-Cdw/edit?usp=sharing">Bi-Weekly Report 6</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1ayogIFsW3jcAo2exwP92lUn311o0xd7rIBya95S3XGQ/edit?usp=sharing">Bi-Weekly Report 7</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1QnwfeGZdugbILT_FZAvk08apw7nj-55Agjyi1IW-TzM/edit?usp=sharing">Bi-Weekly Report 8</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1sHQJ4OwxZXgid5Gv4EQKCusDGJ_WRsJrFitfphKGYgk/edit?usp=sharing">Bi-Weekly Report 9</a>
+            <br>
+            <a href="https://docs.google.com/document/d/19Pup9eWrgUqnsN-HhEj4MMVtEtYHKq08n24Kw8ZB-Bc/edit?usp=sharing">Bi-Weekly Report 10</a>
         </div>
     </div>
      <div class="panel panel-primary">
@@ -241,7 +253,7 @@
          </div>
     </div>
     </div>
-    
+
     <!-- end main text-->
 
     <!--footer starts-->
