--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                             many projects at this level prior to this one. In more recent times I became interested in financial computation
                             so this project with ATOS is really relevant to my points of interest.
                         </p>
+                        <br>
+                        <h4 class="col-sm-8">Email: Artem.Skulimovskiy.15@ucl.ac.uk</h4>
                     </div>
 
                     <h3>Varun Mathur</h3>
@@ -54,6 +56,8 @@
                             in the industry including internships at an insurance tech startup as well as a prime brokerage. Outside of school
                             I have a keen interest in golf, cricket, volleyball and tennis.
                         </p>
+                        <br>
+                        <h4 class="col-sm-8">Email: Varun.Mathur.15@ucl.ac.uk</h4>
                     </div>
 
                     <h3>Sidharth Sikka</h3>
@@ -67,6 +71,8 @@
                             and Python. I have done many projects within web development and am currently looking to take on projects in
                             Java to further advance my skills.Outside of work, I enjoy playing cricket, golf and squash.
                         </p>
+                        <br>
+                        <h4 class="col-sm-8">Email: Sidharth.Sikka.15@ucl.ac.uk</h4>
                     </div>
                 </div>
             </div>
