--- a/Development.html
+++ b/Development.html
@@ -248,6 +248,102 @@
                 Also if due to some circumstances it cannot be finished in time the workload can be easily shared among the team.</p>
         </div>
     </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender5">Requirements Results</div>
+        <div class="panel-body" id="extended5">
+            <p>
+                <ul>
+                    <li><span style="font-weight: bold">Green: </span> Done</li>
+                    <li><span style="font-weight: bold">Yellow: </span>Unsure, May reqire clarification in the future</li>
+                    <li><span style="font-weight: bold">Red: </span> Not Completed</li>
+                </ul>
+            </p>
+            <h3>MoSCoW Analysis</h3>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Must</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td bgcolor="#228b22">Extend the functionality of the existing app</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Manage some functionality of the website</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Implement group owned premium bonds as a financial product</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Implement a web interface which surrounds group owned premium bonds, facilitating all required functionality including: setting up and managing a group, buying bonds as a group and checking for and receiving rewards</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Mobile app must replicate some banking operations found online: check savings balances, check premium bond winnings.</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Mobile app must implement group owned premium bond interface that allows for: checking group winnings</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Have a simple modern interface attractive to the younger generation</td>
+                </tr>
+                <tr>
+                    <td bgcolor="yellow">Encourage younger audience to save</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Have a modular and agile design</td>
+                </tr>
+                <tr>
+                    <td bgcolor="yellow">Legal agreement as to how the money would be split over a group ownership of bonds</td>
+                </tr>
+                <tr>
+                    <th>Should</th>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Mobile app should replicate all banking operations found online: check savings balances, create new account, make contributions to account, withdraw from account, buy premium bonds, check premium bond winnings.</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Mobile app should implement group owned premium bond interface that allows for: checking group winnings, contributing more to groups &#34pot&#34, withdrawing money from groups &#34pot&#34</td>
+                </tr>
+                <tr>
+                    <td bgcolor="yellow">Market NS&I</td>
+                </tr>
+                <tr>
+                    <th>Could</th>
+                </tr>
+                <tr>
+                    <td bgcolor="#dc143c">Manage all the functionality of the website</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#dc143c">Facebook integration to find friends for group owned premium bonds</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#dc143c">Online help (basic walkthrough)</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#dc143c">For persona 1 an attractive point could be showing a potential yield using a mathematical model (savings simulator)</td>
+                </tr>
+                <tr>
+                    <th>Won't Have</th>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">API to implement our new functionality</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Have required interactions outside of the mobile application (eg. telephone call)</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Be catered towards an older audience</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#228b22">Integration to NS&I's backend</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
     <!-- end main text-->
 
     <!--footer starts-->
