--- a/Development.html
+++ b/Development.html
@@ -138,9 +138,74 @@
                     <li>User accounts must be consistent across app and web interface</li>
                 </ul></li>
             </ul>
+        </div>
+    </div>
 
-            Heare are some of the scenarios that we came up with <href="https://docs.google.com/document/d/1c8E8jiPmZO_qkbftAwnQiurAwbJSpIJw_RXlclzRt0E/edit?usp=sharing">scenarios</ahref>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender7">Personas</div>
+        <div class="panel-body" id="extended7">
+            <p>
+                We decided to generate personas to represent different classes of our expected users. In conjunction with use case scenarios, we will be then be able to create user stories. These stories can be thought of as a personification or realisation of our requirements. This will then shape how we conduct our development, as we will try to realise these stories in our proof of concept.
+            </p>
+            <h3>A long time NS&I Customer</h3>
+            <hr>
+            <p>
+                <strong>Age:</strong> 45 - 100
+                <br>
+                <strong>Location:</strong> United Kingdom
+                <br>
+                <strong>Occupation:</strong> Any, possibly retired
+                <br>
+                <strong>Technical Proficiency:</strong> Limited
+                <br>
+                <strong>Flexibility/Adoption Likelihood:</strong> Low
+                <br>
+            </p>
+        </div>
+    </div>
 
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender6">Scenarios</div>
+        <div class="panel-body" id="extended6">
+            <h3>An existing customer downloads the app and wishes to check his savings account balance</h3>
+            <hr>
+            <p>
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He taps his desired account and is giving full details of the account, including balance, recent contributions, and interest payments. He then exits the app and is automatically logged out.
+            </p>
+            <h3>An existing customer downloads the app and wishes to buy premium bonds for themselves</h3>
+            <hr>
+            <p>
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Buy Bonds&#34 option and is taken to a dialog sequence wherein he enters the amount he wants to buy, his desired payment method and then confirms the purchase. He then exits the app and is automatically logged out.
+            </p>
+            <h3>An existing customer downloads the app and wishes to check their sole-owned premium winnings</h3>
+            <hr>
+            <p>
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Check Bonds&#34 option and is presented with a screen showing his new total winnings this month, along with a list of the numbers of any winning bonds he has. He has the option of paying these winnings out to a nominated bank account. He then exits the app and is automatically logged out.
+            </p>
+            <h3>A customer downloads the app and wishes to join a group and purchase group-owned premium bonds</h3>
+            <hr>
+            <p>
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Groups&#34 button and is taken to the &#34Group Owned Premium Bonds&#34 screen. Here he can see what groups (if any) he is part of. At the bottom, there is an option to &#34join a group&#34. He taps this and then is prompted to enter the group code. Upon entering the correct code, a confirmation email is sent to the group admin who can then either confirm or reject his request to join. 
+                <br><br>
+                Upon confirmation, the user will be able to tap on the group and see the group&#39s total winnings, total investment and his contribution. He taps the &#34Add Money&#34 button to pay more money into the group&#39s pot. He selects his nominated bank account and the money is paid in. This means that his total share in the group has increased. He then exits the app and is automatically logged out.
+            </p>
+            <h3>A customer goes onto the NS&I website and wishes to join a premium bond group and contribute to the group&#39s pot </h3>
+            <hr>
+            <p>
+                The customer access and logs on to NS&I&#39s website as normal. In the navigation bar he clicks the &#34Group Premium Bonds&#34 option. He is presented with the group owned premium bond home page where is can see the groups he is part of, a summary of their total pot and total winnings, number of group members. At the bottom there is an option to join a group. He clicks this and is asked to enter the group code.  Upon entering the correct code, a confirmation email is sent to the group admin who can then either confirm or reject his request to join.
+                <br><br>
+                Upon confirmation, the user will be able to access the group&#39s page, where he can see total contributions, total winnings and other members. He will have the option to &#34buy in&#34 to the group and add money to the total pot.
+            </p>
+            <h3>A customer logs on to the NS&I website and wishes to create a premium bond group</h3>
+            <hr>
+            <p>
+                The customer access and logs on to NS&I&#39s website as normal. In the navigation bar he clicks the &#34Group Premium Bonds&#34 option. He is presented with the group owned premium bond home page where is can see the groups he is part of, a summary of their total pot and total winnings, number of group members. He has the option to create a group. He clicks this and can enter a group name and is given the option to invite members by email. Upon creation, he is given a group code which he can share with those he wants to invite to the group.
+            </p>
+            <h3>A customer opens the app and wishes to create a premium bond group</h3>
+            <hr>
+            <p>
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Groups&#34 button and is taken to the &#34Group Owned Premium Bonds&#34 screen. Here he can see what groups (if any) he is part of. At the bottom, there is an option to &#34create a group&#34. He clicks this and can enter a group name and is given the option to invite members by email. Upon creation, he is given a group code which he can share with those he wants to invite to the group.
+            </p>
         </div>
     </div>
 
