--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us.</p>
 
                     <h3>Artem Skulimovskiy</h3>
+                    <h5>Team Leader and Client Liason</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Artem.PNG" class="img-rounded img-responsive col-sm-4" id="artem-image" alt="atos">
@@ -42,10 +43,11 @@
                             so this project with ATOS is really relevant to my points of interest.
                         </p>
                         <br>
-                        <h4 class="col-sm-8">Email: Artem.Skulimovskiy.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Email: artem.skulimovskiy.15@ucl.ac.uk</h4>
                     </div>
 
                     <h3>Varun Mathur</h3>
+                    <h5>Chief Researcher and Programmer</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Varun.PNG" class="img-rounded img-responsive col-sm-4" id="varun-image" alt="atos">
@@ -57,10 +59,11 @@
                             I have a keen interest in golf, cricket, volleyball and tennis.
                         </p>
                         <br>
-                        <h4 class="col-sm-8">Email: Varun.Mathur.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Email: varun.mathur.15@ucl.ac.uk</h4>
                     </div>
 
                     <h3>Sidharth Sikka</h3>
+                    <h5>Chief Technologist and Programmer</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Sidharth.png" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
@@ -72,7 +75,7 @@
                             Java to further advance my skills.Outside of work, I enjoy playing cricket, golf and squash.
                         </p>
                         <br>
-                        <h4 class="col-sm-8">Email: Sidharth.Sikka.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Email: sidharth.sikka.15@ucl.ac.uk</h4>
                     </div>
                 </div>
             </div>
